fix: wrong proprety using align-self not align-item

--- a/flexbox/9-styles.css
+++ b/flexbox/9-styles.css
@@ -381,8 +381,8 @@
   /* Section ABOUT US
       ============================= */
 
-  .section-about-us[class*="col-"] {
-    align-items: center;
+  .section-about-us[class^="col-"] {
+    align-self: center;
   }
 
   /*** 4. CARD ***/
